Add download page, GitHub Actions release workflow, jpackage tasks